# windows-mtr

./: .dockerignore  .gitignore  .markdownlint.jsonc  .pre-commit-config.yaml  AGENTS.md  AI_INSTRUCTIONS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  DEVELOPMENT.md  Dockerfile  README.md  USAGE.md  actionlint.yaml  build.rs  clippy.toml  deny.toml
.cargo/: audit.toml  dist.toml
.codex/: hooks.json
.codex/hooks/: README.md  post_tool_use_review.py  pre_tool_use_policy.py  session_start_context.py
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  actionlint.yaml  copilot-instructions.md  label-definitions.yml  label-taxonomy.yml  labeler.yml  release.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/agents/: README.md  maintainer-agent.md
.github/instructions/: docs.instructions.md  rust.instructions.md
.github/workflows/: ci.yml  codeql.yml  docker-scout.yml  fuzz-regression.yml  pr-auto-labeler.yml  publish-gate.yml  release.yml  reusable-publish.yml  security.yml  semgrep.yml  windows-build.yml  workflow-qa.yml
assets/: banner.png.placeholder
docs/: API.md  BRANCH_REVIEW.md  INSTALLATION.md  README.md  ROADMAP.md  STATUS.md  TUI_ROADMAP.md  USAGE.md  WORKFLOW_ORDER_REVIEW.md  capability-validation.md  distribution.md  gap-prioritization.md  probe-parity.md  reports-pr167-status.md
docs/adr/: 0001-rest-api-stack.md
docs/api/: openapi.yaml
docs/reports/: post-pr-167-status.md  pr-167-post-merge-review.md
docs/security/: rest-api.md
examples/: api_test.rs  trippy_modules.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_passthrough_flags.rs  passthrough_flags.rs
packaging/chocolatey/: windows-mtr.portable.nuspec
packaging/scoop/: windows-mtr.json
packaging/winget/: windows-mtr.installer.yaml  windows-mtr.locale.en-US.yaml  windows-mtr.yaml
scripts/: check_openapi_compat.sh  validate_openapi_schema.py
skills/: README.md
src/: api_error.rs  dashboard_ui.rs  error.rs  lib.rs  main.rs  native_icmp.rs  native_ui.rs  passthrough.rs
src/service/: mod.rs  (+3 more)
tests/: api_contract_tests.rs  api_integration_tests.rs  cli_tests.rs  native_icmp_e2e_tests.rs  privilege_probe_smoke.rs  probe_parity_tests.rs  report_tests.rs  rest_api_security_tests.rs  rest_server_http_tests.rs  unit_tests.rs
xtask/: Cargo.toml
(+16 files in other folders)
