[package]
name = "windows-mtr"
version = "1.1.2"
edition = "2021"
authors = ["Benji Shohet <benjisho>"]
description = "Windows-native clone of Linux mtr — cross-platform Rust CLI for ICMP/TCP/UDP traceroute & ping"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/benjisho/windows-mtr"
rust-version = "1.74.0"

[workspace]
members = ["xtask"]

[dependencies]
trippy = "0.12.2"
clap = { version = "4.5.37", features = ["derive"] }
anyhow = "1.0.98"
thiserror = "2.0.12"
dirs = "5.0.1"
which = "5.0.0"  # Added for finding executables in PATH

[dev-dependencies]
regex = "1.10.3"

[profile.release]
lto = true
codegen-units = 1
strip = true
panic = "abort"

[[bin]]
name = "mtr"
path = "src/main.rs"
