[package]
name = "windows-mtr"
version = "1.1.3"
edition = "2024"
authors = ["Benji Shohet <benjisho>"]
description = "Windows-native clone of Linux mtr — cross-platform Rust CLI for ICMP/TCP/UDP traceroute & ping"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/benjisho/windows-mtr"
rust-version = "1.88.0"

[workspace]
members = ["xtask"]

[dependencies]
trippy = "0.13.0"
trippy-tui = "0.13.0"
clap = { version = "4.5.41", features = ["derive"] }
anyhow = "1.0.98"
thiserror = "2.0.12"
shlex = "1.3.0"
serde_json = "1.0.149"
ratatui = "0.29.0"
crossterm = "0.28.1"

[dev-dependencies]
regex = "1.10.3"

[profile.release]
lto = true
codegen-units = 1
strip = true
panic = "abort"

[[bin]]
name = "mtr"
path = "src/main.rs"
